--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@ height: 100%;
 width: 100%;
 background-color: rgb(0, 0, 0);
 
-
-
 }
 
 
@@ -252,6 +250,7 @@ main{
     justify-content: space-evenly;
     border: 3px solid #6d3cd0;
     background-color:white;
+    transition: border 0.1s ease-in-out;
     
     
    
@@ -259,11 +258,13 @@ main{
 
 
 .skill:hover{
-    background-color:hsl(272, 100%, 95%);
-    border: 5px solid #6d3cd0;
+    
+    border: 6px solid #6d3cd0;
+    color: black;
     
     
 }
+
 
 .skill img{
     width: 30%;
@@ -277,7 +278,7 @@ main{
     font-size: 1.7rem;
     margin: 0;
     font-weight: 500;
-    color: rgb(73, 73, 73);
+    color: rgb(32, 32, 32);
 }
 
 
@@ -387,17 +388,30 @@ main{
 
 
 .contact{
-    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-bottom: 100px;
+    padding-bottom: 150px;
 }
 
-.contact-card form{
+.contact-card {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100%;
+    width:100%;
+   
+}
+.contact-card form{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    width: 30%;
+
+    
+
 }
 
 .contact-card h2{
@@ -414,4 +428,55 @@ main{
 #mod-text{
     color:#8A4FFF;
     
+}
+
+.contact-card form label{
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+
+
+.contact-card form input{
+    font-size: 1.1rem;
+    outline: none;
+    border-radius: 10px;
+    margin: 10px 0;
+    padding:5px 15px;
+    height: 40px;
+    color:#8A4FFF;
+    font-weight: 500;
+    
+}
+.contact-card form textarea{
+    font-size: 1.1rem;
+    color:#8A4FFF;
+    outline: none;
+    border-radius: 10px;
+    margin: 10px 0;
+    padding:5px 15px;
+    height: 150px;
+    font-weight: 500;
+    
+}
+.contact-card form button{
+    background-color:#6d3cd0;
+    padding:10px 25px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    margin-top: 50px;
+    cursor: pointer;
+    color: white;
+    width:200px
+
+}
+.contact-card form button:hover{
+    background-color:#8A4FFF;
+ 
+}
+
+.but-div{
+    display: flex;
+    justify-content: center;
 }
