--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root{
+  --color-1: #0f1016;
+  --text-color: #f0f0f0;
+}
+
 *{
 margin:0;
 padding:0;
@@ -7,6 +13,7 @@ color:white;
 scrollbar-width:none;
 scroll-behavior: smooth;
 
+
 }
 html,body{
 height: 100%;
@@ -14,19 +21,6 @@ width: 100%;
 background-color: rgb(0, 0, 0);
 
 }
-
-
-nav{
-    padding:17px 175px;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: space-around;
-    height:10vh;
-    width: 100%;
-    z-index: 10;
-  
-}
-
 
 logo{
     font-family: 'Orbitron', sans-serif;
@@ -47,36 +41,11 @@ logo span{
     color:#6d3cd0;
 }
 
-links{
-    display: flex;
-    justify-content: space-evenly;
-    width: 50%;
-    align-items: center;
-    margin-left: 40px;
-    
-
+#name{
+    font-size: 3.9rem;
+    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
 }
-
-
-links a{
-   
-    text-decoration: none;
-    font-size: larger;
-    transition: text-decoration-thickness 1s ease,text-underline-offset 1s ease;
- 
-}
-
-links a:hover{
-    
-    text-decoration: underline;
-    text-decoration-color: #6d3cd0;
-    text-decoration-style: solid;
-    text-decoration-thickness: 2px;
-    text-underline-offset: 8px; 
-
-}
-
-
 main{
     height: 90vh;
     display: flex;
@@ -84,6 +53,7 @@ main{
     
     
 }
+
 
 #sec1{
     width:45%;
@@ -114,7 +84,7 @@ main{
     
 }
 
-#sec2 button{
+.btn1{
     background-color:#6d3cd0;
     padding:10px 25px;
     font-size: 1rem;
@@ -125,6 +95,25 @@ main{
     color: white;
 
 }
+.btn2 {
+    color:#6d3cd0;
+    background-color: black;
+    padding:10px 25px;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    margin-top: 50px;
+    cursor: pointer;
+    border: none;
+   
+
+}
+
+
+.btn2 svg{
+    margin-left: 4px;
+    padding-top: 3px;
+   
+}
 
 #sec2 button:hover{
     background-color: #581fc9;
@@ -132,8 +121,12 @@ main{
     
 }
 
+
+
 .socials{
     margin-top: 50px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .socials a i{
@@ -148,10 +141,16 @@ main{
 
 }
 
+#about{
+    text-align: center;
+    margin-bottom: 20px;
+    padding-top: 100px;
+   
+}
 
 .aboutme{
     width: 100%;
-    height: 70vh;
+    
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
@@ -179,10 +178,9 @@ main{
 }
 
 
-
 .about-left img{
     width: 90%;
-    height: 100%;
+    height: 80%;
   
 }
 
@@ -232,7 +230,7 @@ main{
 .skills-flexbox{
     display:flex;
     flex-wrap: wrap;
-    width:60%;
+    width:65%;
     justify-content: center;
     gap:15px;
     margin-top: 50px;
@@ -479,4 +477,191 @@ main{
 .but-div{
     display: flex;
     justify-content: center;
+}
+
+.home-link1{
+    margin-top: 10px;
+}
+
+nav{
+    padding:17px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: flex-end;
+    height:10vh;
+    width: 100%;
+    z-index: 10;
+}
+.links-container{    
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    align-items: center;
+  
+    
+    
+}
+nav a{
+    height: 100%;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-size: larger;
+    transition: text-decoration-thickness 1s ease,text-underline-offset 1s ease;
+}
+nav a:hover{
+   text-decoration: underline;
+    text-decoration-color: #6d3cd0;
+    text-decoration-style: solid;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 8px;
+}
+nav .home-link{
+  margin-right: auto;
+}
+nav svg{
+  fill: var(--text-color);
+}
+#sidebar-active{
+  display: none;
+}
+.open-sidebar-button, .close-sidebar-button{
+  display: none;
+}
+@media(min-width: 768px){
+    .home-link1{
+        display: none;
+    }
+}
+@media(max-width: 768px){
+  .links-container{
+    flex-direction: column;
+    align-items: flex-start;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 10;
+    width: 300px;
+    height: 100%;
+    background-color: var(--color-1);
+    box-shadow: -5px 0 5px rgba(0, 0, 0, 0.25);
+    transition: 0.75s ease-out;
+  }
+  nav{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  nav a{
+    box-sizing: border-box;
+    height: auto;
+    width: 100%;
+    padding: 20px 30px;
+    justify-content: flex-start;
+  }
+  .open-sidebar-button, .close-sidebar-button{
+    padding: 20px;
+    display: block;
+  }
+  #sidebar-active:checked ~ .links-container{
+    right: 0;
+  }
+  #sidebar-active:checked ~ #overlay{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
+  }
+  #sec1{
+    display: none;
+   
+    }
+    main{
+        height: 90%;
+    }
+    #sec2{
+        width: 95%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+ 
+    }
+
+    
+    .aboutme{
+        flex-direction: column;
+        padding-top: 10px;
+     
+    }
+    #about{
+        text-align: center;
+        margin-bottom: 10px;
+        padding-top: 10px;
+       
+    }
+    .about-left{
+        width:100%;
+        height:400px;
+        padding-bottom: 0%;
+      
+    }
+    
+ 
+    .about-right{
+        width: 100%;
+    }
+    .socials{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .socials a i{
+        font-size: 1.6rem;
+        margin-right: 30px;
+    }
+
+    .skills-flexbox{
+        display:flex;
+        flex-wrap: wrap;
+        width:100%;
+        gap:15px;
+       
+        
+       
+    
+    }
+    
+    .skill{
+        width:180px;
+        height: 90px;
+       
+    }
+
+    .contact-card form{
+        display: flex;
+        justify-content:center;
+        flex-direction: column;
+        width: 80%;
+    
+        
+    
+    }
+
+    .btn1,.btn2{
+        margin-top: 20px;
+    }
+    #name{
+        font-size:2.1rem;
+    }
+    .socials{
+        margin-top: 20px;
+    }
+    .projects-section{
+        display: none;
+    }
 }
