--- a/style.css
+++ b/style.css
@@ -563,6 +563,7 @@ nav svg{
   }
   .open-sidebar-button, .close-sidebar-button{
     padding-right: 20px;
+    padding-top:7px;
     display: block;
   }
   #sidebar-active:checked ~ .links-container{
